delivery and weather updated for demo

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "next": "10.0.6",
